updates but bibtex buggy

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -152,7 +152,7 @@ of structure formation in the $\Lambda$CDM model, there is a rare
 chance for massive clusters like El Gordo to have formed at a redshift of
 $z = 0.87$.  Staged simulation would not be able to probe the angular
 dependence. 
-Both weak lensing analysis and BLAH DATA of El Gordo (\citep{Jee13}) has revealed a
+Both weak lensing analysis and BLAH DATA of El Gordo \citep{Jee13} has revealed a
 relatively simple bimodal mass distribution.  The lack of complex
 substructures makes modeling of El Gordo with only two subclusters possible.
 
