--- a/texFiles/2.0_montecarlo_framework.tex
+++ b/texFiles/2.0_montecarlo_framework.tex
@@ -2,7 +2,7 @@ For this analysis, we made use of the collisionless
 dark-matter-only Monte Carlo modeling code written by Dawson (2013),
 hereafter \citepalias{D13}.  
 In the code, the time evolution of the head-on merger was computed
-analytically, assuming that the only dominant force is the gravitational attraction from
+based on an analytical model assuming that the only dominant force is the gravitational attraction from
 the masses of two truncated Naverro-Frenk-White (hereafter NFW) DM halos.
 Other major assumptions for modeling systems with this code include
 negligible impact parameter and no self-interaction of dark matter.\par
@@ -38,9 +38,9 @@ To ensure convergence of the output PDFs, in total, 2 million (to be
 confirmed) realizations were computed. The results, however, are
 consistent up to a fraction of a percent just from 20 000 runs
 \citepalias{D13}.\par    
-We note that the Monte Carlo simulation is written under a Bayesian
-framework but differs from conventional Bayesian inference. The Bayes
-chain rule underlies the simulation is:
+We note that the Monte Carlo simulation is described from a Bayesian
+point of view but the analysis differs from conventional Bayesian inference. The Bayes
+chain rule underlies the simulation can be written as:
 \begin{equation}
     P(\vec{\theta}|\vec{D}) \propto P(\vec{D}|\vec{\theta})P(\vec{\theta})
 \end{equation}
@@ -48,16 +48,17 @@ where the likelihood is defined to be the PDF of $\vec{D}$ given $\vec{\theta}$,
 i.e. the input variables, not statistical parameters, and the priors are
 defined to be the probabilities due to prior knowledge of the estimated values of
 $\vec{\theta}$. The output variables $\vec{\theta}^\prime$, on the other
-hand, were computed according to the conservation of energy, which is represented by a suitable
-function form $f$ below. For example,the calculation of the $j$-th realization: 
+hand, were computed according to the conservation of energy, which is
+represented by a suitable functional form $f$ below. For example,the
+calculation of the output variables of the $j$-th realization can be denoted as: 
 \begin{equation}
     (\vec{\theta}^\prime)^{(j)} = f(\vec{\theta}^{(j)}, \vec{D}) 
 \end{equation}    
-The estimated values of $(\vec{\theta}^\prime)^{(j)}$ were then computed
-over all $j$ realizations. Finally, we took physical
+and computed over all $j$ realizations. Finally, we took the physical
 constraints on $\vec{\theta}$ and $\vec{\theta}^\prime$ into account by
-excluding the unphysical realizations, and we refer to this process as
-``applying prior probability''. 
+examining the resulting physical variables against the physical limits and
+excluding realizations that would produce impossible values. We refer to this
+process of excluding realizations as ``applying prior probability''. 
 
 %To model projection effects, we randomly draw a projection
 %angle in each realization. We throw out realizations with unphysical
