--- a/texFiles/2.2_0_monte_carlo_outputs.tex
+++ b/texFiles/2.2_0_monte_carlo_outputs.tex
@@ -1,5 +1,5 @@
-We summarize the output of the simulation here and leave detailed
-plots and descriptions in Appendix \ref{app: plots}. The simulation
+We outline the outputs of the simulation here to facilitate the discussion
+of the design of the priors used in the simulation. The simulation
 provides PDF estimates for many of the output variables. Variables
 of the most interest include the time dependence and $\alpha$, which is
 defined to be the projection angle between the plane of the sky and the merger axis. Other output variables are dependent on $\alpha$ and the time
@@ -8,8 +8,8 @@ providing several characteristic time-scales, including the time
 elapsed between the collision and when the subclusters first reach apoapsis
 ($T$) and the time-since-collision.  
 
-\textbf{The two version of the time-since-collision variables $TSC_0$ and
-$TSC_1$ denotes different possible merger scenarios.} 1) We call the scenario for which the subclusters are
+The two versions of the time-since-collision variables $TSC_0$ and
+$TSC_1$ denotes different possible merger scenarios. 1) We call the scenario for which the subclusters are
 moving apart after collision to be ``outgoing" and it corresponds to the
 smaller $TSC_0$ value, and 2) we call the alternative scenario 
 ``incoming" for which the subclusters are approaching each other after turning
@@ -17,11 +17,12 @@ around from the apoapsis for the first time and it corresponds to $TSC_1$.
 We describe how we use to break the degeneracies of the two scenarios in
 section \ref{sec: positionprior}. 
  
-\textbf{The simulation also output estimates of variables that characterize
-the dynamics of the merger.} The 3D velocities, both at the time of the
+The simulation also output estimates of variables that characterize
+the dynamics of the merger. The 3D velocities, both at the time of the
 collision ($v_{3D}(t_{col})$) and at the time of observation
-($v_{3D}(t_{obs})$) are provided. The maximum 3D separation ($d_{max}$)
-which is defined to be the distance between the position of collision to the apoapsis is also part of
+($v_{3D}(t_{obs})$) are provided. The maximum 3D separation ($d_{max}$),
+which is defined to be the distance between the position of collision to
+the apoapsis, is also part of
 the outputs. (See the lower half of Table \ref{tab:outputs} for all the outputs).
 %Here we present results based on:\\  %1) a flat radio prior\\
 %2) a uniform prior over a range of most likely 3D separations\\
