--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -3,14 +3,15 @@ polarization fraction of $\sim33\%$ for the two identified relics. The
 high integrated polarization fraction can be explained by uniformly aligned
 magnetic field. (Synchrotron emission from unorganized magnetic field are
 randomly polarized) We refer to a model from \citet{E98} with
-the following physical picture: during a merger, the intracluster medium is compressed, this aligns the unordered
+the following physical picture: during a merger, the intracluster medium is
+compressed, aligning the unordered
 magnetic field perpendicular to the line joining the cluster center to the
 radio relic. (\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12})
 Thus, the synchrotron emission emitted from the electrons near this aligned
 magnetic field is strongly polarized perpendicular to this magnetic field. \par
-\textbf{The major assumption behind the design of our filter
+The major assumption behind the design of our filter
 is that the integrated polarization fraction is a monotonically
-decreasing function of $\alpha$.} 
+decreasing function of $\alpha$. 
 This assumption is inspired by the class of models given by \cite{E98}, 
 which, despite various inputs for spectral indices and magnetic field strength, each predicts a monotonically decreasing integrated
 polarization fraction as a function of $\alpha$. 
@@ -26,15 +27,18 @@ This  polarization fraction of $\sim 75\%$ predicted by \citep{E98} is
 consistent with the upper bound of relic polarization fraction in cosmological
 simulations \citep{S13}. No other model of the magnetic field should predict a higher polarization fraction, thus it is highly unlikely that we see 33\%
 integrated polarization at $\alpha > 39\degree$. \par 
+
 \textbf{We cannot rule out $\alpha \leq 39\degree$ as a result of possible
-variations in the magnetic field.} \cite{E98} assumes an isotropic
-distribution of electrons in an isotropic magnetic field. Cosmological
+variations in the magnetic field.} 
+\cite{E98} assumes an isotropic distribution of electrons in an isotropic magnetic field. Cosmological
 simulations of radio relics from \cite{S13} show varying polarization
 fraction across and along the relic assuming $\alpha = 0$, resulting in a
 lower integrated polarization fraction. 
+
 %Due to these likely variations in the true magnetic field, the true observable integrated polarization values at a given $\alpha$ can be lower than what is predicted by \cite{E98}. 
 %For example, it is possible that the radio relic of El Gordo has a lower maximum face-on polarization fraction than 75\%, but if we are viewing the relic at a smaller $\alpha$, the integrated
 %polarization fraction can still comes out to be 33\%.
+
 For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
 \par 
 %With simplifying assumptions, \cite{E98} have derived the integrated polarization fraction of a radio relic as a function of the viewing
