--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -3,7 +3,6 @@
 %\input{style}
 %\begin{document}
 
-\label{sec: positionprior}
 % draft: 
 % explain that 4300 km /s from L13 
 % explain how the position of the radio relic is calculated 
@@ -50,11 +49,11 @@
 % the SE relic? Yes! 
 % do we need to explain why we are only using the NW relic not the SE
 % relic?
-We demonstrate that despite significant uncertainty in the time
+We demonstrate that despite substantial uncertainty in the time
 evolution of the shock, we can give constraints on the likelihood of the
 outgoing and incoming merger scenarios by comparing the observed and the
 simulated position of the radio relic.
-The key to the success of this method lies our ability in estimating the
+The key to the success of this method depends on our ability to estimate the
 time evolution of the relic velocity, which gives the upper and lower
 bounds on the possible position of the relic for each scenario. The
 uncertainty of the time evolution of the velocity of the shock stem from
