--- a/texFiles/3.2_TSC.tex
+++ b/texFiles/3.2_TSC.tex
@@ -6,7 +6,8 @@ of inferred TSC as shown in figure \ref{fig: positionprior}. We plotted
 the PDF of the simulated positions of the relic for the outgoing scenario
 (blue) and the incoming scenario (green) against
 the observed position of the relic (red), with the width of the red
-relic accounting for the reported width of the relic \citep{L13}. When we
+relic accounting for the reported physical width ($23$ kpc)of the relic along the
+merger axis \citep{L13}. When we
 assume $\langle v_{relic} \rangle / v_{3D,1}(t_{col}) = 1.0$ (uppermost
 panel of Figure \ref{fig: positionprior}), which is approximately the upper
 limit of how fast the shock can travel, the outgoing scenario is much more
@@ -15,15 +16,15 @@ v_{3D,1}(t_{col})$, we probe how much the shock could have slowed down
 and still be consistent with the outgoing scenario. Figure \ref{fig:
 positionprior} shows that if $\langle v_{relic} \rangle
 \lesssim 0.6$, the outgoing scenario would be favored. \par 
-	We intrepret Figure \ref{fig: positionprior} to be more favorable of
-the outgoing scenario than the incoming scenario due to the following
+	We intrepret Figure \ref{fig: positionprior} to favor
+the outgoing scenario over the incoming scenario due to the following
 reasons: 1) Both \citet{Springel2007} and \citet{Kang2007} showed a
 more-or-less constant speed of the shock as the shock propagates out
 from the merger center. 2) In order for the incoming scenario to be more
 favorable, the shock has to travel significantly slower than $0.6~
 v_{3D}(t_{col})$ for a significant period of time. With reasons listed
 above, we present the rest of the results and figures based on the outgoing
-scenario in the main text of this paper and leave those results for the
+scenario in the main text of this paper and leave the results for the
 incoming scenario in Appendix \ref{app: results}. 
 
 Other uncertainties arise from how we define the reference frame for the calculation. The
