--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -1,2 +1,3 @@
 We perform tests of how sensitive our parameters are to the design of our
-prior filters.
+prior filters and found that shifting of the cutoff values by 5\% would
+only affect the inferred values by X\%. 
