--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -1,4 +1,6 @@
 \input{style}
+\input{bib_alias}
+
 %-----------------------------------------------------------------------
 \title[El Gordo]{The dynamics and the merging scenario of the galaxy cluster 
 ACT-CL J0102-4915, 
@@ -85,7 +87,8 @@ the member galaxies among the two subclusters of El Gordo by a spatial cut
 (green line) that is approximately perpendicular to the 2D merger axis.
 The color bar shows the color mapping of the spectroscopic redshift of the
 member galaxies. The spatial cut is done after mapping the world coordinates to
-pixel coordinates to avoid anamorphic distortion.}
+pixel coordinates to avoid anamorphic distortion. (changed background to
+gray since Nick said the white background makes the dots hard to see)}
 \end{figure}
 
 %-----------------------------------------------------------------------
