--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -1,5 +1,9 @@
 %make use of subplots from matplotlib in order to plot all the posteriors
 \label{app: results}
+
+%%%%%%%%%%%%% TASK --- 
+(make sure that there are charts showing the TSC and alpha and velocities
+before this figure or else it may be confusing to readers) 
 \begin{figure}
 	\includegraphics[width=\linewidth]{polar_prior_bounds.pdf}
 	\caption{Comparison of the observed position of the relic with the
