--- a/texFiles/2.1_1_membership_redshift.tex
+++ b/texFiles/2.1_1_membership_redshift.tex
@@ -4,18 +4,18 @@
 % relevant info of the membership is in M11 table 1
 % cannot determine the membership of two galaxies 
 % spatial cut is defined in M11 p.9 first paragraph 
-\textbf{We used a 2D spatial cut to determine members of the two
+We used a 2D spatial cut to determine members of the two
 subclusters, then bootstrapped the biweight locations of the redshifts of the
 respective members in order to obtain the PDFs of the redshifts of each
-subcluster.} We made use of the spectroscopic data
+subcluster. We made use of the spectroscopic data
 obtained from the Very Large Telescope (VLT) and Germini South as described
 in \citetalias{M11} and \citet{Sifon13}. The overall membership of the galaxies
 of El Gordo was determined using a shifting gapper method after applying a
 rest frame cut of 4000~\kilo\meter~\second$^{-1}$. This method gives a
 total count of 89 galaxy members of El Gordo. From the 2D spatial cut of
 the confirmed members, we determined that there are 54 members in the NW
-subclusters and 35 members in the SE subclusters. (See Figure
-\ref{fig:membership}) The spectroscopic redshift of the clusters were
+subclusters and 35 members in the SE subclusters (See Figure
+\ref{fig:membership}). The spectroscopic redshift of the clusters were
 determined to be $z_{NW} = 0.86901 \pm 0.00017$ and $z_{SE} = 0.87175 \pm
 0.00019$, where the quoted numbers represent the biweight location and
 biweight scale respectively \citep{Beers90}. The biweight location
