trying to make the reading flow better

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -15,8 +15,8 @@
 %----------------------------------------------------------------------
 
 %\textbf{to motivate why we want to do this study} 
-\textbf{Mergers of dark-matter-dominated galaxy clusters probes properties
-of the cluster components like no other systems}. 
+Mergers of dark-matter-dominated galaxy clusters probes properties
+of the cluster components like no other systems. 
 Clusters of galaxies are made up of 80\% of dark matter in mass content, 
 with a smaller  portion of intercluster gas($\sim 15\%$ in mass content), and
 sparsely spaced galaxies ($\sim 2\%$ in mass content) (REF). During a merger of
@@ -31,9 +31,9 @@ matter and the other components may suggest dark matter self-interaction
 
 van Weeren 2011a suggests that the double radio relic can provide clue to
 collisional parameters ???
-\textbf{Ever since the discovery of El Gordo in the Atacama Camera Telescope (ACT)
+Ever since the discovery of El Gordo in the Atacama Camera Telescope (ACT)
 survey (REF), there is an ongoing effort for collecting comprehensive data
-for El Gordo.}
+for El Gordo.
 The presence of the radio relic, in
 conjunction with a depression in the X-ray surface brightness shown in M11,
 strongly suggest that El Gordo is a post-collision system so we limit our
@@ -89,9 +89,9 @@ index gradient and are identified as radio relic created from a merger.\par
 	\caption{Configuration of El Gordo (to decide which figure to use,
 	this one is from Lindner et al.) \label{fig:config}}
 \end{figure}
-\textbf{El Gordo is one of small sample of galaxy clusters ($\sim 50$) that have
+El Gordo is one of small sample of galaxy clusters ($\sim 50$) that have
 been associated with a radio relic. (This paragraph needs a lot more
-organization)} Even fewer of them have been studied in
+organization) Even fewer of them have been studied in
 great details, making El Gordo a valuable candidate for further analysis. 
 %Cosmological simulations have largely complement the studies of the
 %observed radio relics.  
@@ -127,8 +127,8 @@ the relic may appear as a halo instead. \citep{S13} \par
 %\textbf{motivation} 
 %\textbf{summarizes what is missing for the understanding of the merger of El
 %Gordo, which is the projection angle and the time-since-collision.}
-\textbf{In this paper, we perform results of simulations for modeling the time
-evolution of the mergers.} 
+In this paper, we perform results of simulations for modeling the time
+evolution of the mergers. 
 Determining the time-since-collision of mergers of similar clusters helps
 us reconstruct different stages of a cluster merger.
 Mergers of clusters proceed on the time-scale of millions of year,
@@ -137,16 +137,16 @@ of merger. In order to understand the merger process observationally,
 we need to capture
 and identify different stages of similar dissociative mergers. \par 
 
-\textbf{Another crucial piece of missing information is the 3D
+Another crucial piece of missing information is the 3D
 configuration, i.e. the projection angle $\alpha$, which contributes the
-largest amount of uncertainties to the dynamical variables \citep{D13}.}
+largest amount of uncertainties to the dynamical variables \citep{D13}.
 With a large projection angle $\alpha$, the radio emission may appear as a
 radio halo instead.  \citep{S13}\par 
 %\textbf{motivation2}
-\textbf{This work is particularly important since it is forbiddingly
+This work is particularly important since it is forbiddingly
 expensive to simulate clusters similar to El Gordo in high resolution. 
 The probability for finding an analog of El Gordo in a cosmological
-simulation is as low as \% (REF)}. A realistic cosmological simulation of
+simulation is as low as \% \citepalias{M11}. A realistic cosmological simulation of
 El Gordo is thus computationally expensive. Under the hierarchical picture
 of structure formation in the $\Lambda$CDM model, there is a rare
 chance for massive clusters like El Gordo to have formed at a redshift of
@@ -158,7 +158,7 @@ substructures makes modeling of El Gordo with only two subclusters possible.
 
 \par
 
-\textbf{In this paper, we adopt the following conventions:} (1) we
+In this paper, we adopt the following conventions: (1) we
 assume the standard $\Lambda$CDM cosmology with $\Omega_{m} = 0.3$, $\Omega_{\Lambda} = 0.7$. (2) All confidence intervals are quoted at the 68\% level unless otherwise stated. 
 (3) All credible intervals (a.k.a. Bayesian confidence intervals) are also
 quoted at the 68\% level unless otherwise stated and are central credible
