--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -1,14 +1,14 @@
-In particular, \cite{L13} reports an integrated
-polarization fraction of $\sim33\%$ for the two identified relics. The
-high integrated polarization fraction can be explained by uniformly aligned
-magnetic field. (Synchrotron emission from unorganized magnetic field are
-randomly polarized) We refer to a model from \citet{E98} with
-the following physical picture: during a merger, the intracluster medium is
-compressed, aligning the unordered
-magnetic field perpendicular to the line joining the cluster center to the
-radio relic. (\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12})
-Thus, the synchrotron emission emitted from the electrons near this aligned
-magnetic field is strongly polarized perpendicular to this magnetic field. \par
+In the presence of a uniform magnetic field, the observed polarization
+fraction of the synchrotron emission of the electrons depends on the
+viewing angle with respect to the alignment of the magnetic field. 
+Synchrotron emission from electrons inside unorganized magnetic field are
+randomly polarized. The high reported integrated polarization fraction from
+\citet{L13} can be explained by a highly aligned magnetic field,
+created by the compressed intracluster medium during a merger
+(\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12}).
+This picture is consistent with a high polarization fraction perpendicular
+to this magnetic field along the relic. 
+\par
 The major assumption behind the design of our filter
 is that the integrated polarization fraction is a monotonically
 decreasing function of $\alpha$. 
@@ -28,19 +28,18 @@ consistent with the upper bound of relic polarization fraction in cosmological
 simulations \citep{S13}. No other model of the magnetic field should predict a higher polarization fraction, thus it is highly unlikely that we see 33\%
 integrated polarization at $\alpha > 39\degree$. \par 
 
-\textbf{We cannot rule out $\alpha \leq 39\degree$ as a result of possible
-variations in the magnetic field.} 
+We cannot rule out $\alpha \leq 39\degree$ as a result of possible
+variations in the magnetic field. 
 \cite{E98} assumes an isotropic distribution of electrons in an isotropic magnetic field. Cosmological
 simulations of radio relics from \cite{S13} show varying polarization
 fraction across and along the relic assuming $\alpha = 0$, resulting in a
-lower integrated polarization fraction. 
+lower integrated polarization fraction. For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
+\par 
 
 %Due to these likely variations in the true magnetic field, the true observable integrated polarization values at a given $\alpha$ can be lower than what is predicted by \cite{E98}. 
 %For example, it is possible that the radio relic of El Gordo has a lower maximum face-on polarization fraction than 75\%, but if we are viewing the relic at a smaller $\alpha$, the integrated
 %polarization fraction can still comes out to be 33\%.
 
-For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
-\par 
 %With simplifying assumptions, \cite{E98} have derived the integrated polarization fraction of a radio relic as a function of the viewing
 %angle ($\delta = 90\degree - \alpha$).
 % and the compression
@@ -66,19 +65,22 @@ For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with int
 %Therefore,   
 %
 %\par
-\textbf{Observation also introduces uncertainties that we have to take into account}. \cite{S13} shows that after convolving the
-simulated polarization signal with a Gaussian kernel of 4\arcmin to match
-observable resolution, the polarization fraction drops to between 30\% to
+Observation also introduces uncertainties that we have to take into account. \cite{S13} shows that after convolving the
+simulated polarization signal with a Gaussian kernel of 4\arcmin~to match
+the observed resolution, the polarization fraction drops to between 30\% to
 65\% even when $\alpha = 0$. 
 Other uncertainties come from the fact that the inferred spectral indices
 differ between the two observed frequencies and vary between the three
-identified relic sources \citep{L13}. 
+identified relic sources \citep{L13}. We examine the effects  of changing
+the cutoff value of this prior to ensure the uncertainties do not
+introduce significant bias in the estimated output variables and we
+present the results in section \ref{}. 
 %\textbf{We pick a form of uniform prior, to represent
 %the uncertainties in both the modeling (\citealt{E98}, \citealt{S13}) and the interpretation of the data from \cite{L13}.} 
-Following previous discussion, we pick a value of $\mu_\alpha =39\degree +
-2 \degree$ to filter realizations, i.e. we do not draw values of $\alpha >
-41\degree$. The extra $2 \degree$ in the prior is included to account for the uncertainty of the integrated polarization fraction reported by \cite{L13}. 
-
+%Following previous discussion, we pick a value of $\mu_\alpha =39\degree +
+%2 \degree$ to filter realizations, i.e. we do not draw values of $\alpha >
+%41\degree$. The extra $2 \degree$ in the prior is included to account for the uncertainty of the integrated polarization fraction reported by \cite{L13}. 
+%
 %For the width of fall off of the sigmoidal function, we pick
 %$\sigma_\alpha = 1\degree$ that corresponds to the uncertainty of the
 %integrated polarization fraction reported by \cite{L13}.    
