--- a/texFiles/2.3_prior.tex
+++ b/texFiles/2.3_prior.tex
@@ -1,21 +1,17 @@
 The strength of the Monte Carlo simulation by \citetalias{D13} is its ability
 to detect and rule out extreme input values that would result in
-unphysical realizations. 
-Our default Monte Carlo priors are described in D13 and they are applied to ensure 
-unphysical realizations in the simulation are ruled out. 
-In addition to the default priors, we also examine the effects of applying 
+unphysical realizations via the application of prior probability. 
+Our default Monte Carlo priors are described in D13 and in Appendix
+\ref{app: results}. We also examine the effects of applying 
 two priors derived based on the position and the integrated polarization
-fraction of the radio relic of El Gordo respectively. 
-%(See Appendix \ref{tab:priors} for a complete list of priors used in this paper.) 
-
-El Gordo shows remarkable double radio relics on the periphery
-(M11). The radio relic  of El Gordo was first mentioned in the Sydney University
-Molonglo Sky Survey (SUMSS) data in low resolution at 843 MHz
-\citep{Mauch03} as shown in M11. The higher resolution radio observation
-conducted by \cite{L13} at 610 \mega Hz and 2.1 \giga Hz confirms that
-the identity of the radio relic after removing effects of radio point sources.
-Radio relics have been suggested to be able to constrain the
-mass ratios, the projection and the merger configuration.
+fraction of the radio relic of El Gordo respectively. El Gordo shows
+remarkable double radio relics on the periphery (M11). The radio relic  of
+El Gordo was first mentioned in the Sydney University Molonglo Sky Survey
+(SUMSS) data in low resolution at 843 MHz \citep{Mauch03} as shown in M11.
+The higher resolution radio observation conducted by \cite{L13} at 610
+\mega Hz and 2.1 \giga Hz confirms that the identity of the radio relic
+after removing effects of radio point sources. Radio relics have been
+suggested to be able to constrain the mass ratios, the projection and the merger configuration.
 \citep{vanWeeren10} 
 
 %%%%%%%%%% WAIT WHAT AM I TRYING TO SAY????
