--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -97,7 +97,7 @@ While the shock does not experience gravitational deceleration as a
 pressure wave, some dissipative processes may have slowed down the shock
 wave slightly as it propagates. By making use of a
 range of $\beta$ values, we examine the how the rate of slow down would
-give a different lower bound of the projeted separation of the relic.   
+give a different lower bound of the projected separation of the relic.   
 
 We compare the bounds with the observed position of the NW relic  at RA = 01:02:46, DEC = -49:14:43 \citep{L13}.
 Three sources of radio relic
