--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -114,7 +114,7 @@ luminosity peaks.
 \input{2.3_prior}
 
 %---------------------------------------------------------------------------
-\subsubsection{Monte Carlo filters based on the integrated polarization fraction of the radio relic}
+\subsubsection{Monte Carlo priors based on the polarization fraction of the radio relic}
 \input{2.3_1_polarization_prior}
 
 %---------------------------------------------------------------------------
@@ -156,12 +156,12 @@ luminosity peaks.
 \section{RESULTS} 
 
 %-----------------------------------------------------------------------
-\subsection{Relative merger speed}
-\input{3.1_merger_speed}
+%\subsection{Relative merger speed}
+\input{3_overview}
 
 %-----------------------------------------------------------------------
 \subsection{Time-since-collision}  
-\input{3.2_TSC}
+\input{3.1_TSC}
 
 %\begin{figure} 
 %	\label{fig: positionprior}
@@ -173,7 +173,6 @@ luminosity peaks.
 
 \subsection{Effects of applied prior on output variables}
 \input{3.3_sens_analysis}
-
 
 %-----------------------------------------------------------------------
 %\subsection{Galaxy centroid from spectroscopic data} The galaxy
