--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -26,7 +26,8 @@ polarization fraction of 33\% corresponds to $\mu_\alpha =  39\degree$.
 This  polarization fraction of $\sim 75\%$ predicted by \citep{E98} is
 consistent with the upper bound of relic polarization fraction in cosmological
 simulations \citep{S13}. No other model of the magnetic field should predict a higher polarization fraction, thus it is highly unlikely that we see 33\%
-integrated polarization at $\alpha > 39\degree$. \par 
+integrated polarization at $\alpha > 39\degree$.  
+\par
 
 We cannot rule out $\alpha \leq 39\degree$ as a result of possible
 variations in the magnetic field. 
@@ -34,6 +35,14 @@ variations in the magnetic field.
 simulations of radio relics from \cite{S13} show varying polarization
 fraction across and along the relic assuming $\alpha = 0$, resulting in a
 lower integrated polarization fraction. For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
+To summarize, the prior derived from polarization information takes the form of:
+\begin{equation}
+P(\alpha) = 
+	\begin{cases}
+	& \text{const. for  }\alpha < 39 \degree \\ 
+	& 0 \text{ otherwise}
+	\end{cases}
+\end{equation}
 \par 
 
 %Due to these likely variations in the true magnetic field, the true observable integrated polarization values at a given $\alpha$ can be lower than what is predicted by \cite{E98}. 
@@ -74,7 +83,7 @@ differ between the two observed frequencies and vary between the three
 identified relic sources \citep{L13}. We examine the effects  of changing
 the cutoff value of this prior to ensure the uncertainties do not
 introduce significant bias in the estimated output variables and we
-present the results in section \ref{}. 
+present the results in Appendix \ref{app: results}. 
 %\textbf{We pick a form of uniform prior, to represent
 %the uncertainties in both the modeling (\citealt{E98}, \citealt{S13}) and the interpretation of the data from \cite{L13}.} 
 %Following previous discussion, we pick a value of $\mu_\alpha =39\degree +
