--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -99,7 +99,8 @@ wave slightly as it propagates. By making use of a
 range of $\beta$ values, we examine the how the rate of slow down would
 give a different lower bound of the projected separation of the relic.   
 
-We compare the bounds with the observed position of the NW relic  at RA = 01:02:46, DEC = -49:14:43 \citep{L13}.
+We compare the bounds with the observed position of the NW relic  at RA =
+01:02:46, Decl. = $-49$:14:43 \citep{L13}.
 Three sources of radio relic
 were identified - including the NW, SE and the E relic. The NW radio
 relic possesses the most extended geometry among all the identified relic source. 
@@ -110,7 +111,7 @@ From \citet{L13}, the estimated speed of the NW relic is $4300 \pm
 ^{800}_{500}\kilo\meter~\second^{-1}$. This speed is compatible with our
 simulated collisional speed but the conversion of the frame of reference is
 non-trivial since the speed is measured with respect to on the turbulent
-intercluster gas as a Mach number.
+intracluster gas as a Mach number.
 
 
 %We incorporate the calculated shock speed of the radio relic as part of
