--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -84,7 +84,8 @@ different ways of denoting the uncertainties do not affect the simulation.\\
 	\includegraphics[width = \linewidth]{confirmed_member_divide.png}
 	\caption{\label{fig:membership} The division of
 the member galaxies among the two subclusters of El Gordo by a spatial cut
-(green line) that is approximately perpendicular to the 2D merger axis.
+(green line) that is approximately perpendicular to the 2D merger axis
+\citepalias{M11}.
 The color bar shows the color mapping of the spectroscopic redshift of the
 member galaxies. The spatial cut is done after mapping the world coordinates to
 pixel coordinates to avoid anamorphic distortion. (changed background to
@@ -208,7 +209,7 @@ improvements can still be made as more studies of radio relic are being
 done from both cosmological simulations and observations.
 
 Currently, there are only a few studies of
- radio relic available for a range of viewing angles (\citealt{S13}, one of
+ radio relic available for a range of viewing angles (\citetalias{S13}, one of
 Bruggen's paper). As more cosmological simulations inform us  
 if the relic is observable at certain viewing angles will help us 
 come up with better Monte Carlo filters. 
