--- a/texFiles/4.2_other_studies.tex
+++ b/texFiles/4.2_other_studies.tex
@@ -1,5 +1,5 @@
-Compare to Lindner et al.
-Compare to Donnert et al. for their best fit scenario.
+Compare to \citet{L13}.
+Compare to \citet{Donnert13} for their best fit scenario.
 %See Menanteau 2012 v1 last section to incorporate discussion of sound
 %crossing time of $\sim $ 1~Gyr. 
 
