--- a/texFiles/app_b_MCMC.tex
+++ b/texFiles/app_b_MCMC.tex
@@ -25,7 +25,7 @@ We consider the joint posterior as the fit to the ellipticity data:
     \end{aligned}
 \end{align} 
 where we have fixed the centers of the halos so $\vec{s}_1$ and $\vec{s}_2$
-are left out of the joint posterior.
+so $\vec{s}_1$ and $\vec{s}_2$ are left out of the joint posterior.
 
 %\begin{align}
 %    &\begin{aligned}
